# talk-to-code

./: README.md  package-lock.json  package.json  test-embedding.js  test-embedding.ts  vercel.json
app/: page.tsx
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/: .gitignore  README.md  pyproject.toml
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/.dev_docker/: ActionDockerFile
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/.github/: GITHUB_ACTION_INFO.md
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/.github/tests/: test_check_print.py  test_function_len.py
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/.github/workflows/: black_check.yml  code_similarity.yml  commented_code_check.yml  docstring_check.yml  function_length_check.yml  lint_check.yml  lint_markdown.yml  md_to_pdf_conversion.yml  md_todo_check.yml  pr_all_github_repos.yml  print_check.yml  python_todo_check.yml  unused_import_check.yml
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/config/: config.toml
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/docker/: Dockerfile
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/documentation/: gen_doc_stubs.py  mkdocs.yml
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/infra/: deployment.yaml
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/scripts/: build_and_run.sh  create_md.sh  run_formatting.sh
uploaded/tai-GaaS-bugfix-sankeagrawal-fe-be-issues/FEMA_Demo/src/: defintions.py  genai_app.py  utils.py
(+130 files in other folders)
