
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfl_template_package"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Starter template for SFL projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/Deloitte/SFL-Template#readme"
"Homepage" = "https://github.com/Deloitte/SFL-Template"
"Bug Tracker" = "https://github.com/Deloitte/SFL-Template/issues"

